Update and rename weddinglist-v2.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Wedding of Sophia & Ethan</title>
+    <title>The Wedding List</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
     />
 
-    <link rel="stylesheet" href="weddinglist-v2.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="page-container">
@@ -51,6 +51,6 @@
       </footer>
     </div>
 
-    <script src="weddinglist-v2.js" defer></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
