--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <div class="content-container">
           <h1 class="page-title">Wedding List</h1>
 
+          <div id="cagnotte-container"></div>
+          
           <div class="tabs-container">
             <a href="#" class="tab-item" data-tab="kitchen">Kitchen</a>
             <a href="#" class="tab-item" data-tab="home">Home</a>
