--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <main class="main-content">
         <div class="content-container">
           <h1 class="page-title">Wedding List</h1>
-
+          <div class="intro-paragraph">
+          <p>Votre présence à notre mariage est le plus beau des cadeaux que vous puissiez nous faire. Cependant, si vous souhaitez nous témoigner une attention supplémentaire, vous trouverez sur cette page quelques idées qui nous feraient plaisir.</p>
+          <p>Habitant à l'étranger, nous avons opté pour une liste dématérialisée. Pour éviter les frais, nous vous proposons de participer via Revolut. Dans tous les cas, n'oubliez pas de cliquer sur le bouton de confirmation sur le site pour que votre participation soit bien enregistrée. Merci du fond du cœur pour votre générosité !</p>
+          </div>
+          
           <div id="cagnotte-container"></div>
           
           <div class="tabs-container">
