--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mariage Elise & Maxime - V8</title>
-    <link rel="stylesheet" href="style8.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -501,6 +501,20 @@
     </div>
 </section>
 
+    <section id="liste-de-mariage-section" class="content-section">
+    <div class="section-title-container">
+        <h2 class="section-title">Liste de Mariage</h2>
+        <p class="section-subtitle">Votre présence est notre plus beau cadeau.</p>
+    </div>
+    <div class="wedding-list-intro">
+        <p>
+            Parce que vous nous gâtez déjà par votre présence, nous n'avons besoin de rien d'autre.
+            Pour ceux qui souhaitent tout de même nous offrir une attention, nous avons préparé avec amour une petite liste qui nous aidera à démarrer notre nouvelle vie ensemble.
+        </p>
+        <a href="liste.html" class="cta-button rsvp-button">Découvrir notre liste</a>
+    </div>
+</section>
+        
 <section id="faq-section" class="content-section">
     <div class="section-title-container">
         <h2 class="section-title">Questions Fréquentes</h2>
@@ -563,7 +577,7 @@
     </div>
 </section>
 
-   <script src="script8.js"></script>
+   <script src="script.js"></script>
      <footer class="site-footer">
     <div class="footer-content-wrapper">
         <p class="footer-names">Elise &amp; Maxime</p>
