--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
              <li><a href="#equipe-section">Notre équipe</a></li>
              <li><a href="#programme-section">Programme</a></li>
              <li><a href="#infospratiques-section">Infos Pratiques</a></li>
+             <li><a href="#liste-de-mariage-section">Liste de Mariage</a></li>
              <li><a href="#faq-section">FAQ</a></li>
          </ul>
      </nav>
