--- a/liste.html
+++ b/liste.html
@@ -37,9 +37,17 @@
             </div>
         </main>
 
-        <footer class="site-footer">
-            <p>Elise & Maxime - 2026</p>
-        </footer>
+         <footer class="site-footer">
+    <div class="footer-content-wrapper">
+        <p class="footer-names">Elise &amp; Maxime</p>
+        <p class="footer-separator">&hearts;</p> 
+        <p class="footer-date">20 Juin 2026</p>
+    </div>
+    <div class="footer-signature">
+        <p>Fait avec amour pour notre grand jour.</p>
+        <p>&copy; 2024-2026 Elise & Maxime. Tous droits réservés.</p>
+    </div>
+</footer>
     </div>
 
     <div id="modal-overlay" class="modal-overlay"></div>
