--- a/index.html
+++ b/index.html
@@ -512,8 +512,7 @@
             Parce que vous nous gâtez déjà par votre présence, nous n'avons besoin de rien d'autre.
             Pour ceux qui souhaitent tout de même nous offrir une attention, nous avons préparé avec amour une petite liste qui nous aidera à démarrer notre nouvelle vie ensemble.
         </p>
-        <a href="liste.html" class="cta-button rsvp-button">Découvrir notre liste</a>
-    </div>
+    <a href="liste.html" class="cta-button rsvp-button" target="_blank" rel="noopener noreferrer">Découvrir notre liste</a>    </div>
 </section>
         
 <section id="faq-section" class="content-section">
