--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
              <li><a href="#equipe-section">Notre équipe</a></li>
              <li><a href="#programme-section">Programme</a></li>
              <li><a href="#infospratiques-section">Infos Pratiques</a></li>
+             <li><a href="#rsvp-section" class="nav-rsvp-button">RSVP</a></li>
              <li><a href="#liste-de-mariage-section">Liste de Mariage</a></li>
              <li><a href="#faq-section">FAQ</a></li>
          </ul>
      </nav>
-     <a href="#rsvp-section" class="rsvp-cta-fixed">RSVP</a> 
      <div class="hero-content">
          <h3 class="hero-subtitle">We're getting married</h3>
          <h1>Elise & Maxime</h1>
