--- a/index.html
+++ b/index.html
@@ -352,62 +352,72 @@
             <div class="hebergement-grid">
                 <div class="hebergement-card">
                     <div class="hebergement-card-image">
-                        <img src="https://via.placeholder.com/350x220/87CEEB/333?text=Hôtel+Les+Pins" alt="Hôtel Les Pins">
+                        <img src="https://a0.muscache.com/im/pictures/miso/Hosting-670068997102111967/original/a7b0e819-931e-4038-bd06-f96d5a4bded8.jpeg?im_w=1440" alt="Gîte Dammeg">
                     </div>
                     <div class="hebergement-card-content">
-                        <h4>Hôtel Les Pins</h4>
-                        <p class="hebergement-description">Confort et calme à 10 minutes du château.</p>
-                        <a href="#" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                        <h4>Gîte Dammeg - Clérac</h4>
+                        <p class="hebergement-description">Logement entier - 12 personnes -  10 minutes du château.</p>
+                        <a href="https://www.airbnb.fr/rooms/670068997102111967?preview_for_ml=true&source_impression_id=p3_1676896662_ozvbw91HogU1xyMY&check_in=2026-06-20&guests=1&adults=1&check_out=2026-06-21" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
                     </div>
                 </div>
                 <div class="hebergement-card">
                     <div class="hebergement-card-image">
-                        <img src="https://via.placeholder.com/350x220/98FB98/333?text=Gîte+La+Prairie" alt="Gîte La Prairie">
+                        <img src="https://a0.muscache.com/im/pictures/18654988-1dbc-407e-a4b2-047e3a36508f.jpg?im_w=1440" alt="Le Moulin de Fontbouillant">
                     </div>
                     <div class="hebergement-card-content">
-                        <h4>Gîte La Prairie</h4>
-                        <p class="hebergement-description">Idéal pour les familles, avec un grand jardin.</p>
-                        <a href="#" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                        <h4>Le Moulin de Fontbouillant - Montguyon</h4>
+                        <p class="hebergement-description">Logement entier - 6 personnes -  10 minutes du château</p>
+                        <a href="https://www.airbnb.fr/rooms/25536516?source_impression_id=p3_1665577014_Vyd6CBxmop0YpafD&guests=6&adults=6&check_in=2026-06-19&check_out=2026-06-21" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
                     </div>
                 </div>
                 <div class="hebergement-card">
                     <div class="hebergement-card-image">
-                        <img src="https://via.placeholder.com/350x220/FFDAB9/333?text=Chambres+Le+Verger" alt="Chambres Le Verger">
+                        <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-940218655226783904/original/decd266e-26e6-43ea-9d20-8d1a6d8b165d.jpeg?im_w=1440">
                     </div>
                     <div class="hebergement-card-content">
-                        <h4>Chambres Le Verger</h4>
-                        <p class="hebergement-description">Charme et authenticité au cœur des vignes.</p>
-                        <a href="#" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                        <h4>Maison Les Passereaux - Orignolles</h4>
+                        <p class="hebergement-description">Logement entier - 4 personnes -  10 minutes du château</p>
+                        <a href="https://www.airbnb.fr/rooms/940218655226783904?adults=1&enable_m3_private_room=true&location=Cl%C3%A9rac%2C%20France&search_mode=regular_search&source_impression_id=p3_1719394920_P3iomOFJdXjy3Im1&previous_page_section_name=1001&federated_search_id=629276e5-4813-452f-8904-748e224afbd9&guests=1&check_in=2026-06-12&check_out=2026-06-14" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
                     </div>
                 </div>
                 <div class="hebergement-card">
                     <div class="hebergement-card-image">
-                        <img src="https://via.placeholder.com/350x220/D8BFD8/333?text=Auberge+du+Relais" alt="Auberge du Relais">
+                        <img src="https://static.wixstatic.com/media/eed58f_e18eec2a292347c38e9083eec7b2315f~mv2.jpg/v1/fill/w_587,h_444,q_85,usm_0.66_1.00_0.01/eed58f_e18eec2a292347c38e9083eec7b2315f~mv2.jpg" alt="Maison - Saint-Pierre-du-Palais">
                     </div>
                     <div class="hebergement-card-content">
-                        <h4>Auberge du Relais</h4>
-                        <p class="hebergement-description">Cuisine traditionnelle et ambiance conviviale.</p>
-                        <a href="#" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                        <h4>Domaine Du Haut Preau - Saint-Palais-de-Négrignac</h4>
+                        <p class="hebergement-description">5 chambres privées - 10 personnes -  15 minutes du château</p>
+                        <a href="https://www.ledomaineduhautpreau.com/chambresettarifs/%3Fadults%3D1%26checkIn%3D1781913600000%26checkOut%3D1782000000000%26children%3D0" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
                     </div>
                 </div>
                 <div class="hebergement-card">
                     <div class="hebergement-card-image">
-                        <img src="https://via.placeholder.com/350x220/B0E0E6/333?text=Le+Petit+Logis" alt="Le Petit Logis">
+                        <img src="https://media.vrbo.com/lodging/78000000/77950000/77943600/77943600/34680a06.jpg?impolicy=resizecrop&rw=1200&ra=fit" alt="Maison - Cercoux">
                     </div>
                     <div class="hebergement-card-content">
-                        <h4>Le Petit Logis</h4>
-                        <p class="hebergement-description">Studio indépendant parfait pour un couple.</p>
-                        <a href="#" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                        <h4>Maison - Cercoux</h4>
+                        <p class="hebergement-description">6 personnes -  10 minutes du château</p>
+                        <a href="https://www.abritel.fr/location-vacances/p2108612" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
                     </div>
                 </div>
                 <div class="hebergement-card">
                     <div class="hebergement-card-image">
-                        <img src="https://via.placeholder.com/350x220/F0E68C/333?text=Domaine+Bel+Air" alt="Domaine Bel Air">
+                        <img src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqYYScN-RNLBqknRQ9mKZbjwNw2CPc_rd3MktpQTMoRdxr3uc-b15wNiTUrFEh1jH9jmT_AolDyncPKZmkuPeuUs0EpuZVu-e-xxeeQakcoD7x2hBtXs0CK-ppAlDwb9plAY519=s1360-w1360-h1020-rw" alt="Hôtel Henri IV">
                     </div>
                     <div class="hebergement-card-content">
-                        <h4>Domaine Bel Air</h4>
-                        <p class="hebergement-description">Gîtes spacieux dans un cadre verdoyant.</p>
-                        <a href="#" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                        <h4>Hôtel Henri IV - Coutras</h4>
+                        <p class="hebergement-description">x chambres disponibles - 20 minutes du château</p>
+                        <a href="https://www.hotelcoutras.com/hotel-henri-iv/chambres-centre-ville.php" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
+                    </div>
+                </div>
+                <div class="hebergement-card">
+                    <div class="hebergement-card-image">
+                        <img src="https://cf.bstatic.com/xdata/images/hotel/max1280x900/686182562.jpg?k=a4a217e4e96cbfb830d1aa7c98dbb82d998a7f895720b5e57f20bf3663ef61d8&o=&hp=1" alt="Gite Cyprien Audoire">
+                    </div>
+                    <div class="hebergement-card-content">
+                        <h4>Gite Cyprien Audoire - Saint-Pierre-du-Palais</h4>
+                        <p class="hebergement-description">Logement entier - 6 chambres - 12 personnes - 10 minutes du château</p>
+                        <a href="https://www.booking.com/hotel/fr/gite-cyprien-audoire.fr.html?label=gen173nr-1BCAEoggI46AdIM1gEaGmIAQGYAQ24ARnIAQzYAQHoAQGIAgGoAgO4AomDvMIGwAIB0gIkZDdhZDBiM2QtNWM3ZC00ZDZmLWJlZjktY2FhMWExNjNjMTNi2AIF4AIB&sid=5be42fc614b784e2581b60ef33bbf3d2&aid=304142&ucfs=1&checkin=2026-06-20&checkout=2026-06-21&dest_id=-1420680&dest_type=city&group_adults=6&no_rooms=1&group_children=0&srpvid=52a97a504d891828&srepoch=1750008235&matching_block_id=1419976001_413655535_12_0_0&atlas_src=sr_iw_title&activeTab=main" class="cta-button-small hebergement-link" target="_blank" rel="noopener noreferrer">Voir & Réserver</a>
                     </div>
                 </div>
             </div>
