--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                  </div>
                  <div class="team-member-card">
                      <div class="team-member-photo">
-                         <img src="https://via.placeholder.com/250x250/5D737E/FFFFFF?text=Photo+T%C3%A9moin" alt="Nom Prénom - Témoin de Maxime">
+                         <img src="images/equipe/hugo.jpg" alt="Hugo - Témoin de Maxime">
                      </div>
                      <div class="team-member-info">
                          <h4 class="team-member-name">Hugo</h4>
