--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mariage Elise & Maxime - V10</title>
-    <link rel="stylesheet" href="style10.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -598,7 +598,7 @@
     </div>
 </section>
 
-   <script src="script10.js"></script>
+   <script src="script.js"></script>
      <footer class="site-footer">
     <div class="footer-content-wrapper">
         <p class="footer-names">Elise & Maxime</p>
