--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                  </div>
                  <div class="team-member-card">
                      <div class="team-member-photo">
-                         <img src="https://via.placeholder.com/250x250/B08D57/FFFFFF?text=Photo+T%C3%A9moin" alt="Nom Prénom - Témoin d'Elise">
+                         <img src="images/equipe/emilie.JPG" alt="Nom Prénom - Témoin d'Elise">
                      </div>
                      <div class="team-member-info">
                          <h4 class="team-member-name">Émilie</h4>
