--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
              <div class="team-grid temoins-grid">
                  <div class="team-member-card">
                      <div class="team-member-photo">
-                         <img src="images/equipe/julie.JPG" alt="Nom Prénom - Témoin d'Elise">
+                         <img src="images/equipe/julie.jpg" alt="Nom Prénom - Témoin d'Elise">
                      </div>
                      <div class="team-member-info">
                          <h4 class="team-member-name">Julie</h4>
@@ -177,7 +177,7 @@
                  </div>
                  <div class="team-member-card">
                      <div class="team-member-photo">
-                         <img src="images/equipe/emilie.JPG" alt="Nom Prénom - Témoin d'Elise">
+                         <img src="images/equipe/emilie.jpg" alt="Nom Prénom - Témoin d'Elise">
                      </div>
                      <div class="team-member-info">
                          <h4 class="team-member-name">Émilie</h4>
