--- a/liste.html
+++ b/liste.html
@@ -35,10 +35,9 @@
                     </button>
                 </section>
 
-                <div id="tabs-container" class="tabs-container">
-                    <a href="#" class="tab-item active" data-category="all">Tous</a>
+                <div id="gift-list-container" class="gift-list">
+                    <p class="loading-message">Chargement de la liste de cadeaux...</p>
                     </div>
-
             </div>
         </main>
 
